<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_initiales">OSO</string>
    <string name="app_name">Ohm Sweet Ohm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="alarm_info">OSO</string>
    <string name="alarm_deactivated">Alarme désactivée</string>
    <string name="alarm_activated">Alarme activée</string>
    <string name="alarmsilenced_activated">Alarme silencieuse activée</string>
    <string name="alarm_salon_fired">Alarme salon déclenchée</string>
    <string name="alarm_garage_fired">Alarme garage déclenchée</string>
    <string name="alarmsilenced_salon_fired">Alarme silencieuse salon déclenchée</string>
    <string name="alarmsilenced_garage_fired">Alarme silencieuse garage déclenchée</string>
    <string name="alarm_unreachable">Serveur injoignable</string>
    <string name="sw_Arm">Armer</string>
    <string name="sw_Disarm">Désarmer</string>
    <string name="sw_SilencedDisarm">Armer Silencieux</string>
    <string name="lb_Etat">Etat : </string>
    <string name="lb_LastSeen">Dernier contact : </string>
    <string name="bt_Refresh">Actualiser</string>
    <string name="lb_notif">Notifications</string>
</resources>
